kitten/reported_bugs/rust/rust-83613/stderr.txt
error[E0658]: `impl Trait` in type aliases is unstable

 --> mutant.rs:4:19

  |

4 | type OpaqueType = impl OpaqueTrait ;

  |                   ^^^^^^^^^^^^^^^^

  |

  = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

  = help: add `#![feature(min_type_alias_impl_trait)]` to the crate attributes to enable



warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes

 --> mutant.rs:1:17

  |

1 | # ! [ feature ( type_alias_impl_trait ) ]

  |                 ^^^^^^^^^^^^^^^^^^^^^

  |

  = note: `#[warn(incomplete_features)]` on by default

  = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information



warning: unnecessary parentheses around block return value

 --> mutant.rs:5:34

  |

5 | fn mk_opaque ( ) -> OpaqueType { ( || { 0 } )

  |                                  ^^^^^^^^^^^^ help: remove these parentheses

  |

  = note: `#[warn(unused_parens)]` on by default



error: internal compiler error: compiler/rustc_trait_selection/src/traits/coherence.rs:600:13: ty_is_local invoked on unexpected type: [closure@mutant.rs:5:34: 5:46]



thread 'rustc' panicked at 'Box<Any>', /rustc/9b0edb7fddacd6a60a380c1ce59159de597ab270/library/std/src/panic.rs:59:5

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.53.0-nightly (9b0edb7fd 2021-03-27) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [specialization_graph_of] building specialization graph of trait `AnotherTrait`

#1 [coherent_trait] coherence checking all impls of trait `AnotherTrait`

end of query stack

error: aborting due to 2 previous errors; 2 warnings emitted



For more information about this error, try `rustc --explain E0658`.

